# flinks-python

./: .coveragerc  .gitignore  .travis.yml  Makefile  Pipfile  README.rst  setup.cfg  setup.py  tox.ini
flinks/: __init__.py  baseapi.py  client.py  exceptions.py
flinks/entities/: attributes.py  banking_services.py
tests/unit/: test_client.py
tests/unit/entities/: test_banking_services.py
