[flake8]
exclude = build,docs,.tox,.venv
ignore = E731, W504
max-line-length = 100

[isort]
default_section = THIRDPARTY
known_first_party = flinks
line_length=100
lines_after_imports = 2
not_skip = __init__.py
skip=migrations

[metadata]
license-file = LICENSE

[tool:pytest]
norecursedirs = build src .tox node_modules
confcutdir = ./tests/
python_paths = ./

[wheel]
universal = 1
